tests/paczka1/fuzzy1/19050946.err
Error in line 3: 9fj2zuYboYk A916 6,8
Error in line 4: HUD A410 11,7
Error in line 5: 9fj2zuYboYk A410 30,5
Error in line 11: Ib9iXq S3 36,1
Error in line 15: LXM4LGu S557 85,0
Error in line 27: S3 S557 3,8
Error in line 17: Ib9iXq S557 1,0
Error in line 30: S3 S557 18,7
